# doorlock

./: CMakeLists.txt  LICENSE  README.adoc  doorlock.code-workspace
common/: CMakeLists.txt  config.cmake
common-esp32/: README.adoc
common-esp32/components/error/: error.cpp  error.h
common-esp32/components/interaction/: interaction.h
common-esp32/components/libdesfire_esp/: CMakeLists.txt
common-esp32/components/mqtt_roles/: CMakeLists.txt  KConfig  mqtt_config.cpp  mqtt_config.h  mqtt_topic.cpp  mqtt_topic.h  mqtt_wrapper.cpp  mqtt_wrapper.h  publisher.cpp  publisher.h
common-esp32/components/mqtt_roles_setup/: CMakeLists.txt  mqtt_setup.cpp  mqtt_setup.h  mqtt_storage.cpp  mqtt_storage.h
common-esp32/components/pn532_beetle_esp32c6/: CMakeLists.txt  KConfig  KConfig.pn532  Pn532BeetleEsp32C6Spi.cpp  Pn532BeetleEsp32C6Spi.h
common-esp32/components/publish/: publisher.h
common-esp32/components/util/: CMakeLists.txt  hw_timer.cpp  hw_timer.h
common-esp32/components/wifi/: wifi_connection.cpp  wifi_connection.h  wifi_station.cpp
common-esp32/components/wifi_setup/: CMakeLists.txt  ap_selection.h  wifi_setup.cpp  wifi_setup.h
common/cardwriter/: card_operations.cpp  card_operations.h
common/config/: CreateStringBlobArray.cmake  README.md  card_layout.h  config.cmake  secrets.cmake.in  secrets.h.in
common/libdesfire/: Buffer.h  CMakeLists.txt  ControllerFrameWriter.h  DES.cpp  DesFireKey.h  Desfire.cpp  Desfire.h  FrameFormatter.cpp  FrameFormatter.h  FrameParser.cpp  NullTargetDataValidator.cpp  NullTargetDataWriter.cpp  NullTargetDataWriter.h  PN532.cpp  PN532Interface.h  TargetDataValidator.h  TargetDataWriter.h  Timer.h  Utils.cpp  Utils.h
common/libdesfire_tests/: CMakeLists.txt  DataAsserter.h  test_frame_parser.cpp
common/messages/: CMakeLists.txt  const_stream.cpp  const_stream.h  open_message_builder.cpp  open_message_builder.h
common/messages_tests/: CMakeLists.txt  test_open_message_builder.cpp
common/pn532-ft232h/: CMakeLists.txt  Ft232hI2C.h  Ft232hSpi.cpp  PN532OverFT232HI2C.cpp  PN532OverFT232HI2C.h  PN532OverFT232HSPI.cpp
common/rapidjson/: CMakeLists.txt
common/test-ft232h/: CMakeLists.txt  test-i2c.cpp
esp32-cardreader/: .gitignore  CMakeLists.txt  pytest.py  sdkconfig  sdkconfig.old
esp32-cardreader/components/interaction/: CMakeLists.txt  interaction_loop.h
esp32-cardreader/components/libdesfire_esp/: CMakeLists.txt  libdesfire_esp.cpp
esp32-cardreader/components/pn532_beetle_esp32c6/: CMakeLists.txt  Pn532BeetleEsp32C6Spi.cpp  Pn532BeetleEsp32C6Spi.h
esp32-cardreader/components/publish/: CMakeLists.txt  mqtt_event_handle.cpp  mqtt_event_handle.h  publisher.cpp
esp32-cardreader/components/storage/: CMakeLists.txt
esp32-cardreader/components/wifi/: wifi_connection.cpp  wifi_station.cpp  wifi_station.h
esp32-cardreader/main/: CMakeLists.txt  KConfig  KConfig.projbuild  ap_selection.h  app_storage.cpp  app_storage.h  main.cpp  mqtt_config.cpp  mqtt_config.h  setup.cpp  setup.h
esp32-dooropener/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32-dooropener/components/rapidjson/: CMakeLists.txt
esp32-dooropener/main/: CMakeLists.txt  KConfig  main.cpp  open_message_builder.cpp  open_message_builder.h  relay_controller.cpp  relay_controller.h  setup.cpp  setup.h
hardware/: README.adoc  cardreader.FCStd  dooropener.3mf  dooropener.FCStd
src/: CMakeLists.txt
src/cardwriter/: CMakeLists.txt  app.cpp  card_operations.cpp  card_operations.h
src/config/: CreateByteArray.cmake  card_layout.h  secrets.cmake.in  secrets.h.in
src/libdesfire/: AES128.cpp  AES128.h  Buffer.h  CMakeLists.txt  Classic.cpp  Classic.h  ControllerFrameWriter.h  DES.cpp  DES.h  DesFireKey.h  Desfire.cpp  Desfire.h  FrameFormatter.h  FrameParser.cpp  FrameParser.h  FrameWriterFuncs.h  NullTargetDataValidator.h  PN532.cpp  PN532.h  PN532Interface.h  Secrets.h  TargetDataValidatorFuncs.h  TargetDataWriterFuncs.h  TargetFrameWriter.h  Tfi.h  Utils.h
src/libdesfire_tests/: CMakeLists.txt  DataAsserter.cpp  TestDataWriter.cpp  TestDataWriter.h  TestFrameWriter.cpp  TestFrameWriter.h  test_frame_formatter.cpp
src/pn532-ft232h/: CMakeLists.txt  Ft232h.cpp  Ft232h.h  Ft232hI2C.cpp  Ft232hSpi.h  PN532OverFT232H.cpp  PN532OverFT232H.h  PN532OverFT232HSPI.h  Timer.cpp  Timer.h
src/test-ft232h/: CMakeLists.txt  app.cpp  test-spi.cpp
