set(CMAKE_CXX_STANDARD 23)
add_library(pn532-ft232h EXCLUDE_FROM_ALL PN532OverFT232H.cpp Ft232h.cpp Timer.cpp)
target_compile_definitions(pn532-ft232h PUBLIC FTDIMPSSE_STATIC)
target_include_directories(pn532-ft232h INTERFACE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(pn532-ft232h PUBLIC libdesfire libmpsse ftd2xx)